--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
 	"name": "template",
 	"version": "1.0.0",
 	"description": "Parcel Tailwind CSS Template",
-	"source": "src/index.html",
 	"author": "Bachitter Chahal",
 	"license": "MIT",
 	"private": false,
-	"scripts": {
-		"dev": "parcel -p 3000 --open",
-		"build": "parcel build -p 3000 --open"
-	},
 	"devDependencies": {
-		"autoprefixer": "^10.4.2",
-		"parcel": "^2.3.2",
-		"postcss": "^8.4.7",
-		"tailwindcss": "^3.0.23"
+		"autoprefixer": "^10.4.4",
+		"browser-sync": "^2.27.9",
+		"cssnano": "^5.1.4",
+		"gulp": "^4.0.2",
+		"gulp-postcss": "^9.0.1",
+		"gulp-sass": "^5.1.0",
+		"gulp-terser": "^2.1.0",
+		"postcss": "^8.4.12",
+		"prettier": "^2.6.0",
+		"sass": "^1.49.9"
 	}
 }
