--- a/package.json
+++ b/package.json
@@ -4,17 +4,35 @@
 	"description": "Parcel Tailwind CSS Template",
 	"author": "Bachitter Chahal",
 	"license": "MIT",
-	"private": false,
+	"main": "index.js",
+  "browserslist": "> 0.5%, last 2 versions, IE 10",
+  "scripts": {
+    "dev": "webpack serve",
+    "build": "NODE_ENV=production webpack",
+    "build:dev": "webpack",
+    "lint": "eslint .js,.jsx,.ts,.tsx src --cache && echo 'Linting complete!'"
+  },
+	"private": true,
 	"devDependencies": {
-		"autoprefixer": "^10.4.4",
-		"browser-sync": "^2.27.9",
-		"cssnano": "^5.1.4",
-		"gulp": "^4.0.2",
-		"gulp-postcss": "^9.0.1",
-		"gulp-sass": "^5.1.0",
-		"gulp-terser": "^2.1.0",
-		"postcss": "^8.4.12",
-		"prettier": "^2.6.0",
-		"sass": "^1.49.9"
-	}
+    "@babel/core": "^7.17.8",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.4",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-webpack-plugin": "^3.1.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "postcss": "^8.4.12",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.4.3",
+    "prettier": "^2.6.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
+  }
 }
