--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "webpack-dev-server": "^4.7.4"
   },
   "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=7.0.0"
+    "node": ">=16.0.0"
   }
 }
